[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.8",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.41",
    "langgraph-checkpoint>=2.0.16",
    "langgraph>=0.3.2",
    "tarsafe>=0.0.5",
    "typing-extensions>=4.12.2",
    "openai>=1.0.0",
]
